Update Job Connect link to new Vercel URL

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ footer{background:var(--navy);color:rgba(255,255,255,0.65);text-align:center;pad
       <div class="proj-body">
         <div class="proj-tags"><span class="tag">TypeScript</span><span class="tag">React</span><span class="tag">Supabase</span><span class="tag">PLpgSQL</span></div>
         <ul class="proj-bullets"><li>Live jobs API integration with dynamic TypeScript data mapping</li><li>User authentication via Supabase Auth with profile management</li><li>Search and filter by keyword, location, and category</li><li>In-app application submissions stored in PostgreSQL</li><li>PLpgSQL functions for server-side database logic</li></ul>
-        <div class="proj-links"><a href="https://jobconnectza.lovable.app" target="_blank" class="proj-link">&#127760; Live Site &#8599;</a><a href="https://github.com/Webst1r/job-connect-za" target="_blank" class="proj-link">GitHub &#8599;</a></div>
+        <div class="proj-links"><a href="https://job-connect-za.vercel.app/" target="_blank" class="proj-link">&#127760; Live Site &#8599;</a><a href="https://github.com/Webst1r/job-connect-za" target="_blank" class="proj-link">GitHub &#8599;</a></div>
       </div>
     </div>
     <div class="project-card reveal">
@@ -361,7 +361,7 @@ footer{background:var(--navy);color:rgba(255,255,255,0.65);text-align:center;pad
   <ul class="footer-links">
     <li><a href="https://github.com/Webst1r" target="_blank">GitHub</a></li>
     <li><a href="https://linkedin.com/in/mthokozisi-masombuka-04abb5330" target="_blank">LinkedIn</a></li>
-    <li><a href="https://jobconnectza.lovable.app" target="_blank">Job Connect ZA</a></li>
+    <li><a href="https://job-connect-za.vercel.app/" target="_blank">Job Connect ZA</a></li>
     <li><a href="https://invest-in-you-weld.vercel.app" target="_blank">CertStokvel</a></li>
     <li><a href="https://webst1r.github.io/MyCv" target="_blank">Portfolio</a></li>
     <li><a href="https://www.credly.com/badges/969cc9b3-89be-4b9e-b9f5-5bc90fe8ef2b/public_url" target="_blank">AWS Badge</a></li>
